# rust_fscloud_task1

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile-multi  Dockerfile-single  Readme.md  zadanie1.md  zadanie1_dod.md  zadanie2.md
.github/workflows/: gha_build_and_push.yml
src/: hello_service.rs  logger.rs  main.rs  model.rs
