[package]
name = "rust_fscloud_task1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4"
geolocation = "0.2.1"
chrono = "0.4.24"
chrono-tz = "0.8.2"
sanitize-filename = "0.4.0"
